--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -35,6 +35,7 @@ theme: # https://www.mkdocs.org/user-guide/choosing-your-theme/#readthedocs
     - content.footnote.tooltips
 plugins:
   - search
+  - mermaid2
   - mkdocstrings: # https://mkdocstrings.github.io/python/usage/
       handlers:
         python:
@@ -50,7 +51,11 @@ plugins:
   - include-markdown
 markdown_extensions:
   - admonition
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+            - name: mermaid
+              class: mermaid
+              format: !!python/name:mermaid2.fence_mermaid_custom
   - toc:
       permalink: true
   - pymdownx.arithmatex:
