--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,9 @@ dependencies = [
 ]
 
 [project.urls]
-source = "https://github.com/michaelweinold/greengraph"
+source = "https://github.com/greengraph/greengraph"
 homepage = "https://greengraph.readthedocs.io"
-tracker = "https://github.com/michaelweinold/greengraph"
+tracker = "https://github.com/greengraph/greengraph"
 
 [project.optional-dependencies]
 # Getting recursive dependencies to work is a pain, this
@@ -52,13 +52,7 @@ testing = [
 
 [tool.setuptools]
 include-package-data = true
-packages = [
-  "greengraph",
-  "greengraph.core",
-  "greengraph.import",
-  "greengraph.import.characterization",
-  "greengraph.import.databases",
-]
+packages = { find = { where = ["."] } }
 
 [options.packages.find]
 where = ["greengraph"]
