--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -10,8 +10,8 @@ nav:
     - Notation and Diagrams: 'theory/notation.md'
     - Hybrid Life-Cycle Assessment: 'theory/hlca.md'
     - Hybrid Matrix Calculations: 'theory/calculations.md'
-  - Structure:
-    - greengraph: 'structure/greengraph.md'
+  - Architecture:
+    - Overview: 'architecture/overview.md'
   - Practice:
     - Getting Started: 'practive/gettingstarted.md'
     - Working with the Graph: 'practice/graph.md'
@@ -56,7 +56,8 @@ plugins:
             show_root_heading: true
             heading_level: 2
             show_source: true
-            filters: []
+            members: true
+            #filters: []
   - markdown-exec
   - autorefs
   - include-markdown
