--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -56,8 +56,7 @@ plugins:
             show_root_heading: true
             heading_level: 2
             show_source: true
-            members: true
-            #filters: []
+            filters: []
   - markdown-exec
   - autorefs
   - include-markdown
