--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -21,6 +21,7 @@ nav:
     - Core: 'api/core.md'
     - Math: 
       - Matrix: 'api/math/matrix.md'
+      - Graph: 'api/math/graph.md'
     - Import:
       - Databases:
         - Generic: 'api/importers/databases/generic.md'
@@ -29,6 +30,8 @@ nav:
       - Charactization Methods:
         - Generic: 'api/importers/characterization/generic.md'
         - IMPACT World +: 'api/importers/characterization/iwp.md'
+    - Utility:
+      - Graph: 'api/utility/graph.md'
 theme: # https://www.mkdocs.org/user-guide/choosing-your-theme/#readthedocs
   name: material
   #custom_dir: docs/_overrides
@@ -47,18 +50,13 @@ theme: # https://www.mkdocs.org/user-guide/choosing-your-theme/#readthedocs
 plugins:
   - search
   - mermaid2
-  - mkdocstrings: # https://mkdocstrings.github.io/python/usage/
-      handlers:
-        python:
-          options:
-            docstring_style: numpy
-            show_root_toc_entry: True
-            show_root_heading: true
-            heading_level: 2
-            show_source: true
-            filters: []
+  - mkdocstrings:
+        handlers:
+          python:
+            options:
+              docstring_style: numpy
   - markdown-exec
-  - autorefs
+  #- autorefs
   - include-markdown
 markdown_extensions:
   - admonition
